@@ -91,6 +91,10 @@ This matches against access patterns that indicate that the defaul ELF interpret
 .B ld_so
 This matches against access patterns that indicate that the program is being started directly by the runtime linker.
 .RE
+.TP
+.B static
+This matches against ELF files that are statically linked.
+.RE
 
 .RE
 
