@@ -1,6 +1,7 @@
 0.8.11
 - Convert hashes to lowercase like sha256sum outputs
 - Use FAN_OPEN_EXEC_PERM for subject cache management
+- Add static pattern detection
 
 0.8.10
 - Fix segfault for rules whose subject is number oriented
